objects/Opportunity_Stage_History__c.object
<CustomObject>
    <description>Used to track all opportunity stage changes</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Stage History</relationshipLabel>
        <relationshipName>Opportunity_Stage_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Marked_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage Marked date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Stage History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OSH-{00000}</displayFormat>
        <label>Opportunity Stage History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Stage Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>